test/files/neg/t1241.check
t1241.scala:5: error: class type required but AnyRef{def hello(): Unit} found
  val x4 = new T { def hello() { println("4") } }        // error!
               ^
one error found
